fix print dialog, image editor toggle icons, highcontrast dropdown hover, immersive-reader button

--- a/theme/highcontrast.less
+++ b/theme/highcontrast.less
@@ -741,8 +741,10 @@
 
     .ui.dropdown .menu,
     .ui.dropdown .menu > .item,
+    .ui.dropdown .menu > .item:hover,
     .ui.menu .ui.dropdown .menu,
-    .ui.menu .ui.dropdown .menu > .item {
+    .ui.menu .ui.dropdown .menu > .item,
+    .ui.menu .ui.dropdown .menu > .item:hover {
         background: @HCbackground !important;
         color: @HCtextColor !important;
 
